--- a/package.json
+++ b/package.json
@@ -70,6 +70,13 @@
     "@types/node": "^20.10.4",
     "@types/nprogress": "^0.2.3",
     "@types/qrcode": "^1.5.5",
+    "@vicons/antd": "^0.12.0",
+    "@vicons/carbon": "^0.12.0",
+    "@vicons/fluent": "^0.12.0",
+    "@vicons/ionicons4": "^0.12.0",
+    "@vicons/ionicons5": "^0.12.0",
+    "@vicons/material": "^0.12.0",
+    "@vicons/tabler": "^0.12.0",
     "@vitejs/plugin-vue": "^4.5.2",
     "autoprefixer": "^10.4.16",
     "commitizen": "^4.3.0",
