--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vueuse/core": "^10.7.0",
     "@vueuse/motion": "^2.0.0",
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "d3": "^7.8.5",
     "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
