--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "qrcode": "^1.5.3",
     "socket.io-client": "^4.7.2",
     "vue": "^3.3.12",
+    "vue-cropper": "^1.1.1",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
