--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@tauri-apps/api": "^1.5.2",
     "@vueuse/core": "^10.7.0",
     "@vueuse/motion": "^2.0.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "d3": "^7.8.5",
