--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "qrcode": "^1.5.3",
     "socket.io-client": "^4.7.2",
     "vue": "^3.3.12",
