--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vue-cropper": "^1.1.1",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5",
+    "vue3-puzzle-vcode": "^1.1.7",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "devDependencies": {
