--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "bugs": {
     "url": "https://github.com/Hollow288/fishTest-vue/issues"
   },
+  "type": "module",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -98,7 +102,7 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3",
     "unplugin-auto-import": "^0.17.2",
-    "unplugin-icons": "^0.18.1",
+    "unplugin-icons": "^0.18.5",
     "unplugin-vue-components": "^0.26.0",
     "vite": "4.5.1",
     "vite-plugin-compression": "^0.5.1",
