--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "d3": "^7.8.5",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "lodash-es": "^4.17.21",
